frontend/test/should_fail/inh_attrib_model_009.gm
// A multiply inherited node attribute should be
// rejected when it comes from different super classes

node class Type1 {
}

node class Type2 extends Type1 {
	a : float;
}


node class Type3 extends Type1 {
	a : float;
}

node class Type4  extends Type2, Type3 {
}


